Se actualizo el CV

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </a>
             <section class="introduction-container col-lg-6 col-sm-12">
                 <h4 class="title">¿Quien soy?</h4>
-                <p class="mt-3">Tengo 25 años, egresado de la Universidad Insurgentes con la licenciatura en Administración de Tecnologías de la Información. Soy un apasionado de la tecnología, con un fuerte interés en la programación y el análisis de datos. A lo largo de los últimos años, me he dedicado a un aprendizaje continuo en estas áreas, fortaleciendo mis habilidades tanto en desarrollo de software como en el procesamiento y análisis de datos. Actualmente, me desempeño como Analista Financiero (CPM) en una firma de consultoría, donde aplico mis conocimientos para optimizar procesos y generar insights estratégicos. Paralelamente, en mi tiempo libre, estudio temas relacionados con el analisis de datos, explorando técnicas  de análisis, modelado y visualización de datos para expandir mis capacidades en el campo de la analítica y la toma de decisiones basadas en datos.</p>
+                <p class="mt-3">Tengo 25 años y soy egresado de la Universidad Insurgentes con una licenciatura en Administración de Tecnologías de la Información. Desde los 15 años comencé a trabajar en pequeños negocios, llegando a los 19 a trabajar en despachos juridicos y posteriormente como Freelancer. En 2023, obtuve mi primer empleo en tecnología como Ingeniero de Soporte, donde disfruté especialmente el desarrollo de modelos de campos dentro de Odoo y el mantenimiento de diversos dashboards. Posteriormente, me adentré en el aprendizaje de SAP y ABAP para dar soporte a los módulos FI, MM y HR. En mi última experiencia laboral, aprendí a utilizar la herramienta OneStream, lo que me llevó a adquirir conocimientos en finanzas para comprender el negocio y trasladar esos conceptos al ámbito técnico. En este rol, programé diversos cálculos utilizando Visual Basic y SQL. Actualmente, sigo capacitándome mediante cursos, enfocándome principalmente en análisis de datos y desarrollo web</p>
                 <a href="./css/pdf/curriculum.pdf">
                     <button class="btn btn-success title">
                         <img src="./css/img/curriculum/cv.png" alt="CV image" class="img-cv">
@@ -91,6 +91,7 @@
 
             <section class="certificaciones col-lg-6 col-sm-12">
               <h4 class="title">Certificaciones</h4>
+
               <div id="carrusel-certificaciones" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item solid-yellow">
