Correciones de ortografia

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <main id="main-container" class="row">
 
             <a name="acerca-de-mi" class="col-12 about">
+
                 <h3 class="title texto-separado">Acerca de mí</h3>
             </a>
             <section class="introduction-container col-lg-6 col-sm-12">
                 <h4 class="title">¿Quien soy?</h4>
-                <p class="mt-3">Tengo 25 años y soy egresado de la Universidad Insurgentes con una licenciatura en Administración de Tecnologías de la Información. Desde los 15 años comencé a trabajar en pequeños negocios, llegando a los 19 a trabajar en despachos juridicos y posteriormente como Freelancer. En 2023, obtuve mi primer empleo en tecnología como Ingeniero de Soporte, donde disfruté especialmente el desarrollo de modelos de campos dentro de Odoo y el mantenimiento de diversos dashboards. Posteriormente, me adentré en el aprendizaje de SAP y ABAP para dar soporte a los módulos FI, MM y HR. En mi última experiencia laboral, aprendí a utilizar la herramienta OneStream, lo que me llevó a adquirir conocimientos en finanzas para comprender el negocio y trasladar esos conceptos al ámbito técnico. En este rol, programé diversos cálculos utilizando Visual Basic y SQL. Actualmente, sigo capacitándome mediante cursos, enfocándome principalmente en análisis de datos y desarrollo web</p>
+                <p class="mt-3">Tengo 25 años y soy egresado de la Universidad Insurgentes con una licenciatura en Administración de Tecnologías de la Información. Desde los 15 años comencé a trabajar en pequeños negocios, llegando a los 19 a trabajar en despachos juridicos y posteriormente como Freelancer. En 2023, obtuve mi primer empleo en tecnología como Ingeniero de Soporte, donde disfruté especialmente el desarrollo de modelos de campos dentro de Odoo y el mantenimiento de diversos dashboards en Power BI. Posteriormente, me adentré en el aprendizaje de SAP y ABAP para dar soporte a los módulos FI, MM y HR. En mi última experiencia laboral, aprendí a utilizar la herramienta OneStream, lo que me llevó a adquirir conocimientos en finanzas para comprender el negocio y trasladar esos conceptos al ámbito técnico. En este rol, programé diversos cálculos utilizando Visual Basic y SQL. Actualmente, sigo capacitándome mediante cursos, enfocándome principalmente en análisis de datos y desarrollo web</p>
                 <a href="./css/pdf/curriculum.pdf">
                     <button class="btn btn-success title">
                         <img src="./css/img/curriculum/cv.png" alt="CV image" class="img-cv">
