--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="contenedor-texto">
                   <h5>¡Hola!</h5>
                   <h2>Soy Miguel Eusebio</h2>
-                  <h5>Desarrollador JR y Futuro Data Science</h5>
+                  <h5>Desarrollador Mid y Analista de Datos</h5>
               </div>
               
               <div class="contenedor-imagen">
@@ -80,7 +80,9 @@
             </a>
             <section class="introduction-container col-lg-6 col-sm-12">
                 <h4 class="title">¿Quien soy?</h4>
-                <p class="mt-3">Tengo 25 años y soy egresado de la Universidad Insurgentes con una licenciatura en Administración de Tecnologías de la Información. Desde los 15 años comencé a trabajar en pequeños negocios, llegando a los 19 a trabajar en despachos juridicos y posteriormente como Freelancer. En 2023, obtuve mi primer empleo en tecnología como Ingeniero de Soporte, donde disfruté especialmente el desarrollo de modelos de campos dentro de Odoo y el mantenimiento de diversos dashboards en Power BI. Posteriormente, me adentré en el aprendizaje de SAP y ABAP para dar soporte a los módulos FI, MM y HR. En mi última experiencia laboral, aprendí a utilizar la herramienta OneStream, lo que me llevó a adquirir conocimientos en finanzas para comprender el negocio y trasladar esos conceptos al ámbito técnico. En este rol, programé diversos cálculos utilizando Visual Basic y SQL. Actualmente, sigo capacitándome mediante cursos, enfocándome principalmente en análisis de datos y desarrollo web</p>
+                <p class="mt-3"><b>Profesional en análisis de datos, desarrollo de software y gestión de ERP</b> con experiencia en la implementación de soluciones tecnológicas y optimización de procesos empresariales. Especializado en el desarrollo de aplicaciones, administración de bases de datos y visualización de datos para la toma de decisiones estratégicas. A lo largo de mi trayectoria, he trabajado en la gestión y mantenimiento de <b>OneStream y SAP</b>, desarrollando reglas de negocio en <b>Visual Basic y SQL</b> para mejorar el rendimiento de los sistemas. He diseñado dashboards en <b>Power BI y Odoo</b>, implementando <b>procesos ETL</b> para transformar datos en información valiosa. Además, tengo experiencia en el desarrollo de soluciones a medida con <b>Python y MySQL</b>, asegurando la seguridad y accesibilidad de la información. En el área de soporte y administración IT, he gestionado la infraestructura tecnológica, brindado soporte a usuarios internos y externos, y optimizado la seguridad en entornos empresariales. Mi enfoque está en la innovación y la eficiencia, proporcionando soluciones tecnológicas que impulsen el crecimiento y la digitalización de las organizaciones.
+                  
+                  </p>
                 <a href="./css/pdf/curriculum.pdf">
                     <button class="btn btn-success title">
                         <img src="./css/img/curriculum/cv.png" alt="CV image" class="img-cv">
